--- a/src/main/resources/templates/Dashboard/index.html
+++ b/src/main/resources/templates/Dashboard/index.html
@@ -30,21 +30,21 @@
 
 					<div class="panel panel-default">
 						<div class="panel-heading">
-							Request <span th:text="${request.requestId}"></span>
+							 <span th:text="${request.requestId}"></span>
 						</div>
 						<table class="table">
 							<tr>
-								<th>Short Description</th>
+								<th>Request Title:</th>
+								<td><span th:text="${request.requestTitle}"></span></td>
+							</tr>
+							<tr>
+								<th>Short Description:</th>
 								<td><span th:text="${request.shortDescription}"></span></td>
 							</tr>
 							<tr>
-								<th>Created Date</th>
-								<td><span th:text="${request.createdBy}"></span> 
+								<th>Tags:</th>
+								<td><span th:text="${request.tags}"></span> 
 										</td>
-							</tr>
-							<tr>
-								<th>Content Type</th>
-								<td><a><span th:text="${request.contentType}"></span></a></td>
 							</tr>
 						</table>
 					</div>
