--- a/src/main/resources/templates/Request/listing.html
+++ b/src/main/resources/templates/Request/listing.html
@@ -161,27 +161,33 @@ $(function(){
 				<div class="col-sm-4" style = "background-color: #ecf0f1;height: auto;padding: 10px 15px;border: 5px solid  #ecf0f1;">
 
 					<div class="panel panel-default" style = "padding:5px 5px;">
-						<div class="">
-							Request <span th:text="${request.requestId}"></span>
-						</div>
+
 						<table class="table">
 							<tr>
-								<th>Request Title</th>
+								<th>Request Id:</th>
+								<td><span th:text="${request.requestId}"></span></td>
+							</tr>
+							<tr>
+								<th>Request Title:</th>
 								<td><span th:text="${request.requestTitle}"></span></td>
 							</tr>
 							<tr>
-								<th>Short Description</th>
+								<th>Short Description:</th>
 								<td><span th:text="${request.shortDescription}"></span></td>
 							</tr>
 							<tr>
+								<th>Tags:</th>
+								<td><span th:text="${request.tags}"></span></td>
+							</tr>
+<!-- 							<tr>
 								<th>Created Date</th>
 								<td><span th:text="${request.createdBy}"></span></td>
 							</tr>
 							<tr>
 								<th>Content Type</th>
 								<td><a><span th:text="${request.contentType}"></span></a></td>
-							</tr>
-							<tr>
+							</tr>-->
+							<tr> 
 								<td><button class="btn btn-primary" onclick ="window.location='view'">View</button></td>
 							</tr>
 						</table>
